apps/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"code-server","namespace":"code-server"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"code-server"}},"template":{"metadata":{"labels":{"app":"code-server"}},"spec":{"containers":[{"env":[{"name":"PASSWORD","valueFrom":{"secretKeyRef":{"key":"password","name":"code-server-secret"}}}],"image":"codercom/code-server:latest","name":"code-server","ports":[{"containerPort":8080}],"resources":{"limits":{"cpu" [...]
  name: code-server
  namespace: code-server
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: code-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - env:
        - name: PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: code-server-secret
        image: codercom/code-server:latest
        imagePullPolicy: Always
        name: code-server
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          runAsGroup: 1000
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/coder
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: code-server-data
