apps/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
spec:
  selector:
    app: code-server
  ports:
  - port: 80
    targetPort: 8080
